--- a/faleconosco.html
+++ b/faleconosco.html
@@ -43,7 +43,7 @@
             <legend id="faleconosco"> Deixe sua Mensagem </legend>
             <label for="cMensagem"><textarea type="text" id="cMensagem" name="tMensagem" rows="10" cols="300" placeholder="Digite sua mensagem aqui..."></textarea></label>
         </fieldset>
-        <input type="submit" id="faleconosco" value="Enviar" onclick="validacaofaleconosco()">
+        <input type="submit" id="faleconosco" value="Enviar" onclick="Enviar()">
     </form>
 </section>
 
